Final version at this moment

--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -81,8 +81,8 @@ Secondary school 51 of Vladivostok, 1995 -- 2005.
 \item CSR plc. contractor. Work on the COACH\texttrademark \ SoC \textit{imaging} platform.
 \item Distributed supporting of the embedded software for ODM/OEM customers: main brand-manufacturers of imaging devices (digital still cameras, mobile driver recorders, action cameras, etc).
 \item Support offices are located in a number of countries: China, Israel, Japan, Russia, South Korea, US.
-\item Solving of time-critical project issues under a customer's pressure. Resolved a number of various "MP block" software and hardware problems.
-\item Supported \textit{peripheral} domain. CMOS/CCD optic sensors: drivers bug-fixing, implementation of new capabilities, support for smear correction driver owners. NVM storages: filesystem bug-fixing, NAND drivers timing-optimizations. Display claster: problems related to video output (LCD, HDMI). Volatile-memory storages: DRAM performance measurement and timing-optimizations. On-chip peripheral: bug-fixing for usual BSP device driver set (GPIO, ADC, PWM, RTC, SPI, I2C, function-specific HW units and more). PC-side applied software: bug-fixing and new features implementation for firmware burning tool. Various peripheral-specific algorithms: e.g. Dynamic Voltage Management based on PID-controller. Improved processing performance of UI images for customer's projects.
+\item Solving of time-critical project issues under a customer's pressure. Resolved a number of various "MP block" software and hardware problems. Improved processing performance of UI images for customer's projects.
+\item Supported \textit{peripheral} domain. CMOS/CCD optic sensors: drivers bug-fixing and implementation of new capabilities, support for smear correction driver owners. NVM storages: filesystem bug-fixing, NAND drivers timing-optimizations. Display claster: issues related to video output (LCD, HDMI). Volatile-memory storages: DRAM performance measurement and timing-optimizations. On-chip peripheral: support for usual BSP device driver set (GPIO, ADC, PWM, RTC, SPI, I2C, UART, USB, function-specific HW units and more). PC-side applied software: bug-fixing and new features implementation for firmware burning tool. Various peripheral-specific algorithms: e.g. Dynamic Voltage Management based on PID-controller.
 \item Business trip to CSR Israel (formerly Zoran Corp.): MATAM, Advanced Technology Center, Haifa.
 \end{rCompany}
 
@@ -90,7 +90,8 @@ Secondary school 51 of Vladivostok, 1995 -- 2005.
 \item Startup for a development of an applied hardware.
 \item Designed maket of the mechanical-less manipulator as part of the project management software system.
 \item Designed and manufactured prototype of the valve tubes amplifier for a PC sound cards.
-\item Designed and manufactured "Power over Ethernet" injector. Implemented physical layer of the IEEE 802.3af standart. The product was used in a number of computer network projects.
+\item Designed and manufactured "Power over Ethernet" injector. Implemented physical layer of the IEEE 802.3af specification. The product was used in a number of computer network projects.
+\item Later, in November-2013, implemented IEEE 802.3af full-compatible prototype for this company based on the LTC4263 IC by Linear Technology Corp.
 \end{rCompany}
 
 \end{rSection}
@@ -103,31 +104,32 @@ Secondary school 51 of Vladivostok, 1995 -- 2005.
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
 SW-Development  & Embedded C and C++: source code mixing, a bit of STL. Interrupt- and \\
-                & event-driven design. Development process automation: Python and Perl. \\
-                & Build system: Make and WAF. Multi-threading; Atomthreads, ThreadX. \\
-                & Device drivers. Version control: Perforce, SVN, Git. Code review: Review \\
-                & Board, Code Collaborator. Issue tracking: JIRA, Redmine, eTraxis. \\
-                & Code documentation: Doxygen. Continuous integration: QuickBuild.\\ \\
+                & event-driven design. Ability to read and write code area on assembler. \\
+                & Development process automation: Python and Perl. Build system: Make \\
+                & and WAF. Multi-threading; Atomthreads, ThreadX. Device drivers. \\
+                & Version control: Perforce, SVN, Git. Code review: Code Collaborator, \\
+                & Review Board. Issue tracking: JIRA, Redmine, eTraxis. Continuous \\
+                & integration: QuickBuild. Code documentation: Doxygen. \\ \\
 
 HW-Development  & Digital/analog/tube circuits design and analysis: electrical and thermal \\
                 & calculations, circuits emulation. Selection of electronic components: \\
                 & excellent guided both in through-hole and surface-mount packages. \\
                 & Routing and assembling of prototype PCBs: Eagle CAD, Sprint Layout, \\
-                & a bit of Altium Designer. Excellent skills in manual soldering. \\ \\
+                & KiCAD, a bit of Altium Designer. Excellent skills in manual soldering. \\ \\
 
 Debugging       & Crash-logs analyzing. Remote debugging: customer support via e-mail \\
-                & threads and Skype. In-circuit emulation: JTAG. Lab-equipment usage: \\ 
-                & digital power supply, multimeter, analog/digital oscilloscope, signal \\
-                & generator, autotransformator. \\ \\
+                & threads and Skype in case of non-reproducible locally problems. In-circuit \\
+                & emulation: JTAG. Lab-equipment usage: digital power supply, multimeter, \\
+                & analog/digital oscilloscope, signals generator, autotransformator and more. \\ \\
 
-Languages       & English: professional working proficiency \\
-                & \begin{CJK}{UTF8}{min}日本語\end{CJK}: elementary proficiency \\
-                & Russian: native \\ \\
+Languages       & English -- professional working proficiency \\
+                & \begin{CJK}{UTF8}{min}日本語\end{CJK} -- elementary proficiency \\
+                & Russian -- native \\ \\
 
 Misc            & Foundations of project management: Spider Project. Lathe and milling \\
                 & works: Proxxon equipment. Bring up of computer networks: OSI. A bit \\
                 & experience in transferring of knowledges to students: electronics and \\
-                & programming foundations.
+                & programming foundations.\\ \\ \\
 \end{tabular}
 
 \end{rSection}
@@ -138,7 +140,7 @@ Misc            & Foundations of project management: Spider Project. Lathe and m
 
 \begin{rSection}{Keywords}
 
-1-Wire, ADC, Altium Designer, Atomthreads, AVR, Bash, BSP, C, C++, CAN, Code Collaborator, cross-compiler, Cygwin, DAC, device driver, Doxygen, Eagle CAD, Eclipse, eTraxis, FAT, FileX, Gerber, Git, GNU toolchain, G-Sensor, gyro sensor, HW/SW co-design, IEEE 802.3af, I2C, JIRA, JTAG, KiCAD, libpng, Linux, Make, Maxima, MCS-51, MIPS, OOP, optic sensor, OSI, Perforce, Perl, PHP, PIC, Proxxon, Python, QuickBuild, R\&D, Redmine, RS-232, RTOS, SPI, SPICE, Spider Project, RAW Bayer, Review Board, Source Insight, Sprint Layout, SQL, STL, SVN, \TeX, ThreadX, UART, UML, USB, V8, Visual Studio, WAF, Windows, zlib
+1-Wire, ADC, Altium Designer, Atomthreads, AVR, avr-gcc, Bash, BSP, C, C++, CAN, Code Collaborator, cross-compiler, Cygwin, DAC, device driver, Doxygen, Eagle CAD, Eclipse, eTraxis, FAT, FileX, Gerber, Git, GNU toolchain, G-Sensor, gyro sensor, HW/SW co-design, IEEE 802.3af, I2C, JIRA, JTAG, KiCAD, libpng, Linux, Make, Maxima, MCS-51, MIPS, OOP, optic sensor, OSI, Perforce, Perl, PHP, PIC, Proxxon, Python, QuickBuild, R\&D, Redmine, RS-232, RTOS, SPI, SPICE, Spider Project, RAW Bayer, Review Board, sde, Source Insight, Sprint Layout, SQL, STL, SVN, \TeX, ThreadX, UART, UML, USB, V8, Visual Studio, WAF, Windows, zlib
 
 \end{rSection}
 
