--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -18,7 +18,7 @@
 %----------------------------------------------------------------------------------------
 
 \begin{rSection}{Summary}
-Practical engineer with a focus on the EECS. 3+ years of experience in designing of embedded systems. I have built own experience through hardware and software co-design. Strong skills in electrical engineering, computer science and research area. Looking for new career opportunities in a team of professionals with using of progressive technologies and tools. Main areas of interest are consumer electronics, robotics, automotive and game industry, medical equipment, telecommunication and networks. No blocking problems to work outside the current location.
+Practical engineer with a focus on the EECS. I have built own experience through hardware and software co-design: 4+ years in designing of embedded systems. Strong skills in electrical engineering, computer science and research area. Looking for new career opportunities in a team of professionals with using of progressive technologies and tools. Main areas of interest are consumer electronics, robotics, automotive and game industry, medical equipment, telecommunication and networks. No blocking problems to work outside the current location.
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
@@ -66,7 +66,7 @@ Secondary school 51 of Vladivostok, 1995 -- 2005.
 \begin{rSection}{Publications}
 
 \begin{rItemize}
-\item Ivanov V. "The diagnostic system of a motor drive module for a underwater robot". Master thesis. Institute of Marine Technology Problems FEB RAS, Vladivostok, June 2010.
+\item Ivanov V. "The diagnostic system of a motor-drive module for a underwater robot". Master thesis. Institute of Marine Technology Problems FEB RAS, Vladivostok, June 2010.
 \end{rItemize}
 
 \end{rSection}
@@ -82,15 +82,15 @@ Secondary school 51 of Vladivostok, 1995 -- 2005.
 \item Distributed supporting of the embedded software for ODM/OEM customers: main brand-manufacturers of imaging devices (digital still cameras, mobile driver recorders, action cameras, etc).
 \item Support offices are located in a number of countries: China, Israel, Japan, Russia, South Korea, US.
 \item Solving of time-critical project issues under a customer's pressure. Resolved a number of various "MP block" software and hardware problems. Improved processing performance of UI images for customer's projects.
-\item Supported \textit{peripheral} domain. CMOS/CCD optic sensors: drivers bug-fixing and implementation of new capabilities, support for smear correction driver owners. NVM storages: filesystem bug-fixing, NAND drivers timing-optimizations. Display claster: issues related to video output (LCD, HDMI). Volatile-memory storages: DRAM performance measurement and timing-optimizations. On-chip peripheral: support for usual BSP device driver set (GPIO, ADC, PWM, RTC, SPI, I2C, UART, USB, function-specific HW units and more). PC-side applied software: bug-fixing and new features implementation for firmware burning tool. Various peripheral-specific algorithms: e.g. Dynamic Voltage Management based on PID-controller.
+\item Supported \textit{peripheral} domain. CMOS/CCD optic sensors: drivers bug-fixing and implementation of new capabilities, support for smear correction driver owners. NVM storages: filesystem bug-fixing, NAND drivers timing-optimizations. Display cluster: issues related to video output (LCD, HDMI). Volatile-memory storages: DRAM performance measurement and timing-optimizations. On-chip peripheral: support for usual BSP device driver set (GPIO, ADC, PWM, RTC, SPI, I2C, UART, USB, function-specific HW units and more). PC-side applied software: bug-fixing and new features implementation for firmware burning tool (windows forms). Various peripheral-specific algorithms: e.g. Dynamic Voltage Management based on PID-controller.
 \item Business trip to CSR Israel (formerly Zoran Corp.): MATAM, Advanced Technology Center, Haifa.
 \end{rCompany}
 
 \begin{rCompany}{Spider Pacific Ltd.}{October 2010 -- October 2012}{Embedded Systems Engineer}{Vladivostok, RUS}
 \item Startup for a development of an applied hardware.
-\item Designed maket of the mechanical-less manipulator as part of the project management software system.
-\item Designed and manufactured prototype of the valve tubes amplifier for a PC sound cards.
-\item Designed and manufactured "Power over Ethernet" injector. Implemented physical layer of the IEEE 802.3af specification. The product was used in a number of computer network projects.
+\item Designed model of the mechanical-less manipulator as part of the project management software system.
+\item Designed prototype of the valve-tube amplifier for PC sound cards.
+\item Designed and manufactured prototype of "Power over Ethernet" injector. Implemented physical layer of the IEEE 802.3af specification. The product was used in a number of computer network projects.
 \item Later, in November-2013, implemented IEEE 802.3af full-compatible prototype for this company based on the LTC4263 IC by Linear Technology Corp.
 \end{rCompany}
 
@@ -106,7 +106,7 @@ Secondary school 51 of Vladivostok, 1995 -- 2005.
 SW-Development  & Embedded C and C++: source code mixing, a bit of STL. Interrupt- and \\
                 & event-driven design. Ability to read and write code area on assembler. \\
                 & Development process automation: Python and Perl. Build system: Make \\
-                & and WAF. Multi-threading; Atomthreads, ThreadX. Device drivers. \\
+                & and WAF. Multi-threading: Atomthreads, ThreadX. Device drivers. \\
                 & Version control: Perforce, SVN, Git. Code review: Code Collaborator, \\
                 & Review Board. Issue tracking: JIRA, Redmine, eTraxis. Continuous \\
                 & integration: QuickBuild. Code documentation: Doxygen. \\ \\
@@ -115,7 +115,7 @@ HW-Development  & Digital/analog/tube circuits design and analysis: electrical a
                 & calculations, circuits emulation. Selection of electronic components: \\
                 & excellent guided both in through-hole and surface-mount packages. \\
                 & Routing and assembling of prototype PCBs: Eagle CAD, Sprint Layout, \\
-                & KiCAD, a bit of Altium Designer. Excellent skills in manual soldering. \\ \\
+                & KiCAD, a bit of Altium Designer. Excellent manual soldering skills. \\ \\
 
 Debugging       & Crash-logs analyzing. Remote debugging: customer support via e-mail \\
                 & threads and Skype in case of non-reproducible locally problems. In-circuit \\
@@ -129,7 +129,7 @@ Languages       & English -- professional working proficiency \\
 Misc            & Foundations of project management: Spider Project. Lathe and milling \\
                 & works: Proxxon equipment. Bring up of computer networks: OSI. A bit \\
                 & experience in transferring of knowledges to students: electronics and \\
-                & programming foundations.\\ \\ \\
+                & programming foundations. Computer typography: \TeX.\\ \\ \\
 \end{tabular}
 
 \end{rSection}
@@ -154,7 +154,7 @@ Misc            & Foundations of project management: Spider Project. Lathe and m
 \item Hi-Tech and impacting one on a human being, designing hardware and software
 \item Physics (two completed university years), applied math, world economic
 \item Professional sports leagues: NHL, NFL, MLB
-\item Swimming (sports category), marine multiathlon (sports category)
+\item Swimming (sports category), marine multi-athlon (sports category)
 \item Cooking, electronic music
 \end{rHobby}
 
