--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -27,7 +27,7 @@ Practical engineer with a focus on the EECS. I have built own experience through
 
 \begin{rSection}{Education}
 
-{\bf Far Eastern State University, Vladivostok} \hfill {August 2005 -- June 2010} \\ 
+{\bf Far Eastern State University, Vladivostok} \hfill {August 2005 -- June 2010} \\
 M.S. Departments of General Physics and Electronics. \\
 Degree work was defended in the underwater robotics area. \\
 GPA: 3.63 out of 4.
@@ -46,13 +46,13 @@ In-depth study of Japanese Language.
 %   SERTIFICATES
 %----------------------------------------------------------------------------------------
 
-\begin{rSection}{Sertificates}
+\begin{rSection}{Certificates}
 
 \begin{rItemize}
-\item Two-month course "6.00.1x: Introduction to CS and Programming".  Excellent passing grade. \\
-The online learning initiative of Harvard University and MIT, December 2013.
-\item Three-month course "6.002x: Circuits and Electronics". Maximum passing grade. \\
-The online learning initiative of Harvard University and MIT, June 2012.
+\item Two-month course \textquotedblleft 6.00.1x: Introduction to CS and Programming\textquotedblright. Excellent passing grade. \\
+The on-line learning initiative of Harvard University and MIT, December 2013.
+\item Three-month course \textquotedblleft 6.002x: Circuits and Electronics\textquotedblright. Maximum passing grade. \\
+The on-line learning initiative of Harvard University and MIT, June 2012.
 \item Course of Japanese Language. The course of 1150 hours and a number of final exams. \\
 Secondary school 51 of Vladivostok, 1995 -- 2005.
 \end{rItemize}
@@ -66,7 +66,7 @@ Secondary school 51 of Vladivostok, 1995 -- 2005.
 \begin{rSection}{Publications}
 
 \begin{rItemize}
-\item Ivanov V. "The diagnostic system of a motor-drive module for a underwater robot". Master thesis. Institute of Marine Technology Problems FEB RAS, Vladivostok, June 2010.
+\item Ivanov V. \textquotedblleft The diagnostic system of a motor-drive module for a underwater robot\textquotedblright. Master thesis. Institute of Marine Technology Problems FEB RAS, Vladivostok, June 2010.
 \end{rItemize}
 
 \end{rSection}
@@ -77,12 +77,12 @@ Secondary school 51 of Vladivostok, 1995 -- 2005.
 
 \begin{rSection}{Experience}
 
-\begin{rCompany}{Rhonda Software Ltd.}{October 2012 -- present}{Embedded Software Engineer}{Vladivostok, RUS}
+\begin{rCompany}{Rhonda Software Ltd.}{October 2012 -- Present}{Embedded Software Engineer}{Vladivostok, RUS}
 \item CSR plc. contractor. Work on the COACH\texttrademark \ SoC \textit{imaging} platform.
 \item Distributed supporting of the embedded software for ODM/OEM customers: main brand-manufacturers of imaging devices (digital still cameras, mobile driver recorders, action cameras, etc).
 \item Support offices are located in a number of countries: China, Israel, Japan, Russia, South Korea, US.
-\item Solving of time-critical project issues under a customer's pressure. Resolved a number of various "MP block" software and hardware problems. Improved processing performance of UI images for customer's projects.
-\item Supported \textit{peripheral} domain. CMOS/CCD optic sensors: drivers bug-fixing and implementation of new capabilities, support for smear correction driver owners. NVM storages: filesystem bug-fixing, NAND drivers timing-optimizations. Display cluster: issues related to video output (LCD, HDMI). Volatile-memory storages: DRAM performance measurement and timing-optimizations. On-chip peripheral: support for usual BSP device driver set (GPIO, ADC, PWM, RTC, SPI, I2C, UART, USB, function-specific HW units and more). PC-side applied software: bug-fixing and new features implementation for firmware burning tool (windows forms). Various peripheral-specific algorithms: e.g. Dynamic Voltage Management based on PID-controller.
+\item Solving of time-critical project issues under a customer's pressure. Resolved a number of various \textquotedblleft MP block\textquotedblright software and hardware problems. Improved processing performance of UI images for customer's projects.
+\item Supported \textit{peripheral} domain. CMOS/CCD optic sensors: drivers bug-fixing and implementation of new capabilities, support for smear correction driver owners. NVM storages: file system bug-fixing, NAND drivers timing-optimizations. Display cluster: issues related to video output (LCD, HDMI). Volatile-memory storages: DRAM performance measurement and timing-optimizations. On-chip peripheral: support for usual BSP device driver set (GPIO, ADC, PWM, RTC, SPI, I2C, UART, USB, function-specific HW units and more). PC-side applied software: bug-fixing and new features implementation for firmware burning tool (windows forms). Various peripheral-specific algorithms: e.g. Dynamic Voltage Management based on PID-controller.
 \item Business trip to CSR Israel (formerly Zoran Corp.): MATAM, Advanced Technology Center, Haifa.
 \end{rCompany}
 
@@ -90,7 +90,7 @@ Secondary school 51 of Vladivostok, 1995 -- 2005.
 \item Startup for a development of an applied hardware.
 \item Designed model of the mechanical-less manipulator as part of the project management software system.
 \item Designed prototype of the valve-tube amplifier for PC sound cards.
-\item Designed and manufactured prototype of "Power over Ethernet" injector. Implemented physical layer of the IEEE 802.3af specification. The product was used in a number of computer network projects.
+\item Designed and manufactured prototype of \textquotedblleft Power over Ethernet\textquotedblright injector. Implemented physical layer of the IEEE 802.3af specification. The product was used in a number of computer network projects.
 \item Later, in November-2013, implemented IEEE 802.3af full-compatible prototype for this company based on the LTC4263 IC by Linear Technology Corp.
 \end{rCompany}
 
@@ -103,33 +103,33 @@ Secondary school 51 of Vladivostok, 1995 -- 2005.
 \begin{rSection}{Skills}
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-SW-Development  & Embedded C and C++: source code mixing, a bit of STL. Interrupt- and \\
-                & event-driven design. Ability to read and write code area on assembler. \\
-                & Development process automation: Python and Perl. Build system: Make \\
-                & and WAF. Multi-threading: Atomthreads, ThreadX. Device drivers. \\
-                & Version control: Perforce, SVN, Git. Code review: Code Collaborator, \\
-                & Review Board. Issue tracking: JIRA, Redmine, eTraxis. Continuous \\
-                & integration: QuickBuild. Code documentation: Doxygen. \\ \\
+SW-Development & Embedded C and C++: source code mixing, a bit of STL. Interrupt- and \\
+               & event-driven design. Ability to read and write code area on assembler. \\
+               & Development process automation: Python and Perl. Build system: Make \\
+               & and WAF. Multi-threading: Atomthreads, ThreadX. Device drivers. \\
+               & Version control: Perforce, SVN, Git. Code review: Code Collaborator, \\
+               & Review Board. Issue tracking: JIRA, Redmine, eTraxis. Continuous \\
+               & integration: QuickBuild. Code documentation: Doxygen. \\ \\
 
-HW-Development  & Digital/analog/tube circuits design and analysis: electrical and thermal \\
-                & calculations, circuits emulation. Selection of electronic components: \\
-                & excellent guided both in through-hole and surface-mount packages. \\
-                & Routing and assembling of prototype PCBs: Eagle CAD, Sprint Layout, \\
-                & KiCAD, a bit of Altium Designer. Excellent manual soldering skills. \\ \\
+HW-Development & Digital/analog/tube circuits design and analysis: electrical and thermal \\
+               & calculations, circuits emulation. Selection of electronic components: \\
+               & excellent guided both in through-hole and surface-mount packages. \\
+               & Routing and assembling of prototype PCBs: Eagle CAD, Sprint Layout, \\
+               & KiCAD, a bit of Altium Designer. Excellent manual soldering skills. \\ \\
 
-Debugging       & Crash-logs analyzing. Remote debugging: customer support via e-mail \\
-                & threads and Skype in case of non-reproducible locally problems. In-circuit \\
-                & emulation: JTAG. Lab-equipment usage: digital power supply, multimeter, \\
-                & analog/digital oscilloscope, signals generator, autotransformator and more. \\ \\
+Debugging      & Crash-logs analyzing. Remote debugging: customer support via e-mail \\
+               & threads and Skype in case of non-reproducible locally problems. In-circuit \\
+               & emulation: JTAG. Lab-equipment usage: digital power supply, multimeter, \\
+               & analog/digital oscilloscope, signals generator, autotransformer and more. \\ \\
 
-Languages       & English -- professional working proficiency \\
-                & \begin{CJK}{UTF8}{min}日本語\end{CJK} -- elementary proficiency \\
-                & Russian -- native \\ \\
+Languages      & English -- professional working proficiency \\
+               & \begin{CJK}{UTF8}{min}日本語\end{CJK} -- elementary proficiency \\
+               & Russian -- native \\ \\
 
-Misc            & Foundations of project management: Spider Project. Lathe and milling \\
-                & works: Proxxon equipment. Bring up of computer networks: OSI. A bit \\
-                & experience in transferring of knowledges to students: electronics and \\
-                & programming foundations. Computer typography: \TeX.\\ \\ \\
+Misc           & Foundations of project management: Spider Project. Lathe and milling \\
+               & works: Proxxon equipment. Bring up of computer networks: OSI. A bit \\
+               & experience in transferring of knowledges to students: electronics and \\
+               & programming foundations. Computer typography: \TeX. \\ \\ \\
 \end{tabular}
 
 \end{rSection}
