--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -54,7 +54,7 @@ The on-line learning initiative of Harvard University and MIT, December 2013.
 \item Three-month course \textquotedblleft 6.002x: Circuits and Electronics\textquotedblright. Maximum passing grade. \\
 The on-line learning initiative of Harvard University and MIT, June 2012.
 \item Course of Japanese Language. The course of 1150 hours and a number of final exams. \\
-Secondary school 51 of Vladivostok, 1995 -- 2005.
+Secondary school 51, Vladivostok, 1995 -- 2005.
 \end{rItemize}
 
 \end{rSection}
@@ -78,11 +78,11 @@ Secondary school 51 of Vladivostok, 1995 -- 2005.
 \begin{rSection}{Experience}
 
 \begin{rCompany}{Rhonda Software Ltd.}{October 2012 -- Present}{Embedded Software Engineer}{Vladivostok, RUS}
-\item CSR plc. contractor. Work on the COACH\texttrademark \ SoC \textit{imaging} platform.
+\item CSR plc. contractor. Work on the COACH\texttrademark \ \textit{imaging} SoC platform.
 \item Distributed supporting of the embedded software for ODM/OEM customers: main brand-manufacturers of imaging devices (digital still cameras, mobile driver recorders, action cameras, etc).
 \item Support offices are located in a number of countries: China, Israel, Japan, Russia, South Korea, US.
 \item Solving of time-critical project issues under a customer's pressure. Resolved a number of various \textquotedblleft MP block\textquotedblright software and hardware problems. Improved processing performance of UI images for customer's projects.
-\item Supported \textit{peripheral} domain. CMOS/CCD optic sensors: drivers bug-fixing and implementation of new capabilities, support for smear correction driver owners. NVM storages: file system bug-fixing, NAND drivers timing-optimizations. Display cluster: issues related to video output (LCD, HDMI). Volatile-memory storages: DRAM performance measurement and timing-optimizations. On-chip peripheral: support for usual BSP device driver set (GPIO, ADC, PWM, RTC, SPI, I2C, UART, USB, function-specific HW units and more). PC-side applied software: bug-fixing and new features implementation for firmware burning tool (windows forms). Various peripheral-specific algorithms: e.g. Dynamic Voltage Management based on PID-controller.
+\item Supported \textit{peripheral} domain. CMOS/CCD image sensors: drivers bug-fixing and implementation of new capabilities, support for smear-correction driver team. NV-memory storages: file system bug-fixing, NAND drivers timing-optimizations. Display cluster: issues related to video output (LCD, HDMI). Volatile-memory storages: DRAM performance measurement and timing-optimizations. On-chip peripheral: support for usual BSP device driver set (GPIO, ADC, PWM, RTC, SPI, I2C, UART, USB, function-specific HW units and more). PC-side applied software: bug-fixing and new features implementation for firmware burning tool (windows forms). Various peripheral-specific algorithms: e.g. Dynamic Voltage Management based on PID-controller.
 \item Business trip to CSR Israel (formerly Zoran Corp.): MATAM, Advanced Technology Center, Haifa.
 \end{rCompany}
 
@@ -140,7 +140,7 @@ Misc           & Foundations of project management: Spider Project. Lathe and mi
 
 \begin{rSection}{Keywords}
 
-1-Wire, ADC, Altium Designer, Atomthreads, AVR, avr-gcc, Bash, BSP, C, C++, CAN, Code Collaborator, cross-compiler, Cygwin, DAC, device driver, Doxygen, Eagle CAD, Eclipse, eTraxis, FAT, FileX, Gerber, Git, GNU toolchain, G-Sensor, gyro sensor, HW/SW co-design, IEEE 802.3af, I2C, JIRA, JTAG, KiCAD, libpng, Linux, Make, Maxima, MCS-51, MIPS, OOP, optic sensor, OSI, Perforce, Perl, PHP, PIC, Proxxon, Python, QuickBuild, R\&D, Redmine, RS-232, RTOS, SPI, SPICE, Spider Project, RAW Bayer, Review Board, sde, Source Insight, Sprint Layout, SQL, STL, SVN, \TeX, ThreadX, UART, UML, USB, V8, Visual Studio, WAF, Windows, zlib
+1-Wire, ADC, Altium Designer, Atomthreads, AVR, avr-gcc, Bash, BSP, C, C++, CAN, Code Collaborator, cross-compiler, Cygwin, DAC, device driver, Doxygen, Eagle CAD, Eclipse, eTraxis, FAT, FileX, Gerber, Git, GNU toolchain, G-Sensor, gyro sensor, HW/SW co-design, IEEE 802.3af, I2C, JIRA, JTAG, KiCAD, libpng, Linux, Make, Maxima, MCS-51, MIPS, OOP, image sensor, OSI, Perforce, Perl, PHP, PIC, Proxxon, Python, QuickBuild, R\&D, Redmine, RS-232, RTOS, SPI, SPICE, Spider Project, RAW Bayer, Review Board, sde, Source Insight, Sprint Layout, SQL, STL, SVN, \TeX, ThreadX, UART, UML, USB, V8, Visual Studio, WAF, Windows, zlib
 
 \end{rSection}
 
