--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -9,7 +9,7 @@
 
 \name{Vladimir Ivanov}
 \address{\em Vladivostok, Maritime Province, Russia}
-\address{\Mobilefone \ +7 (924) 320$\cdot$09$\cdot$34 \ \textbar \ \ \Letter \ person@v-u-ivanov.com}
+\address{\Mobilefone \ +7 924 320$\cdot$09$\cdot$34 \ \textbar \ \ \Letter \ job@vova-ivanov.info}
 
 \begin{document}
 
@@ -30,7 +30,7 @@ Practical engineer with a focus on the EECS. I have built own experience through
 {\bf Far Eastern State University, Vladivostok} \hfill {August 2005 -- June 2010} \\
 M.S. Departments of General Physics and Electronics. \\
 Degree work was defended in the underwater robotics area. \\
-GPA: 3.63 out of 4.
+GPA: 3.6/4.
 
 {\bf Secondary school 51, Vladivostok} \hfill {September 2003 -- June 2005} \\
 Secondary education. \\
@@ -87,7 +87,7 @@ Secondary school 51, Vladivostok, 1995 -- 2005.
 \end{rCompany}
 
 \begin{rCompany}{Spider Pacific Ltd.}{October 2010 -- October 2012}{Embedded Systems Engineer}{Vladivostok, RUS}
-\item Startup for a development of an applied hardware.
+\item Start-up for a development of an applied hardware.
 \item Designed model of the mechanical-less manipulator as part of the project management software system.
 \item Designed prototype of the valve-tube amplifier for PC sound cards.
 \item Designed and manufactured prototype of \textquotedblleft Power over Ethernet\textquotedblright injector. Implemented physical layer of the IEEE 802.3af specification. The product was used in a number of computer network projects.
@@ -131,6 +131,19 @@ Misc           & Foundations of project management: Spider Project. Lathe and mi
                & experience in transferring of knowledges to students: electronics and \\
                & programming foundations. Computer typography: \TeX. \\ \\ \\
 \end{tabular}
+
+\end{rSection}
+
+%----------------------------------------------------------------------------------------
+%   PROJECTS
+%----------------------------------------------------------------------------------------
+
+\begin{rSection}{Projects}
+
+\begin{rItemize}
+\item \textquotedblleft PoE Injector\textquotedblright: IEEE 802.3af compatible PoE controller. The pure-HW project.
+\item \textquotedblleft Atmel Framework\textquotedblright. Private Bitbucket-repository.
+\end{rItemize}
 
 \end{rSection}
 
