--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -8,8 +8,8 @@
 % \pagenumbering{arabic}
 
 \name{Vladimir Ivanov}
-\address{\em Vladivostok, Maritime Province, Russia}
-\address{\Mobilefone \ +7 924 320$\cdot$09$\cdot$34 \ \textbar \ \ \Letter \ job@vova-ivanov.info}
+\address{\em \href{}Vladivostok, Maritime Province, Russia}
+\address{\Mobilefone \ +7$\cdot$924$\cdot$320$\cdot$09$\cdot$34 \ \textbar \ \ \Letter \ \href{mailto:job@vova-ivanov.info}{job@vova-ivanov.info} \ \textbar \ \ \includegraphics[scale=0.3]{skype-logo} \href{skype:v.u.ivanov?add}{v.u.ivanov}}
 
 \begin{document}
 
@@ -18,7 +18,7 @@
 %----------------------------------------------------------------------------------------
 
 \begin{rSection}{Summary}
-Practical engineer with a focus on the EECS. I have built own experience through hardware and software co-design: 4+ years in designing of embedded systems. Strong skills in electrical engineering, computer science and research area. Looking for new career opportunities in a team of professionals with using of progressive technologies and tools. Main areas of interest are consumer electronics, robotics, automotive and game industry, medical equipment, telecommunication and networks. No blocking problems to work outside the current location.
+Proficient wide-skilled engineer with a focus on the EECS: 5+ years in designing of embedded systems. I have built own experience through hardware and software codesign. Strong skills in electrical engineering, computer science and research area. Ability to produce stable results under high pressure conditions. Powerful human qualities. I aim to work on a innovative company in a team of professionals. Main areas of interest: consumer electronics, robotics, automotive and game industry, medical equipment, telecommunication and networks, your suggestion?
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
@@ -26,20 +26,18 @@ Practical engineer with a focus on the EECS. I have built own experience through
 %----------------------------------------------------------------------------------------
 
 \begin{rSection}{Education}
+{\bf \href{http://wwwold.dvfu.ru/en/web/fefu/}{Far Eastern Federal University}, Vladivostok} \hfill {August 2005 -- June 2010} \newline
+M.Sc. Department of General Physics and Electronics. \newline
+\href{http://www.oracle.com}{Sun Microsystems} technical contest laureate. \newline 
+GPA: 3.63/4.
 
-{\bf Far Eastern State University, Vladivostok} \hfill {August 2005 -- June 2010} \\
-M.S. Departments of General Physics and Electronics. \\
-Degree work was defended in the underwater robotics area. \\
-GPA: 3.6/4.
+{\bf \href{http://www.school51.pupils.ru}{Secondary school 51}, Vladivostok} \hfill {September 2003 -- June 2005} \newline
+Secondary education. \newline
+Indepth study of Japanese Language.
 
-{\bf Secondary school 51, Vladivostok} \hfill {September 2003 -- June 2005} \\
-Secondary education. \\
-In-depth study of Japanese Language.
-
-{\bf Secondary school 51, Vladivostok} \hfill {September 1995 -- June 2003} \\
-General education. \\
-In-depth study of Japanese Language.
-
+{\bf \href{http://www.school51.pupils.ru}{Secondary school 51}, Vladivostok} \hfill {September 1995 -- June 2003} \newline
+General education. \newline
+Indepth study of Japanese Language.
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
@@ -47,28 +45,14 @@ In-depth study of Japanese Language.
 %----------------------------------------------------------------------------------------
 
 \begin{rSection}{Certificates}
-
 \begin{rItemize}
-\item Two-month course \textquotedblleft 6.00.1x: Introduction to CS and Programming\textquotedblright. Excellent passing grade. \\
-The on-line learning initiative of Harvard University and MIT, December 2013.
-\item Three-month course \textquotedblleft 6.002x: Circuits and Electronics\textquotedblright. Maximum passing grade. \\
-The on-line learning initiative of Harvard University and MIT, June 2012.
-\item Course of Japanese Language. The course of 1150 hours and a number of final exams. \\
+\item Two-month course \href{http://www.vova-ivanov.info/6.00.1x-Certificate.pdf}{\textquotedblleft 6.00.1x: Introduction to CS and Programming\textquotedblright}. Excellent passing grade. \newline
+The online learning initiative of Harvard University and MIT, December 2013.
+\item Three-month course \href{http://www.vova-ivanov.info/6.002x-Certificate.pdf}{\textquotedblleft 6.002x: Circuits and Electronics\textquotedblright}. Maximum passing grade. \newline
+The online learning initiative of Harvard University and MIT, June 2012.
+\item Course of Japanese Language. The course of 1150 hours and a number of final exams. \newline
 Secondary school 51, Vladivostok, 1995 -- 2005.
 \end{rItemize}
-
-\end{rSection}
-
-%----------------------------------------------------------------------------------------
-%   PUBLICATIONS
-%----------------------------------------------------------------------------------------
-
-\begin{rSection}{Publications}
-
-\begin{rItemize}
-\item Ivanov V. \textquotedblleft The diagnostic system of a motor-drive module for a underwater robot\textquotedblright. Master thesis. Institute of Marine Technology Problems FEB RAS, Vladivostok, June 2010.
-\end{rItemize}
-
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
@@ -76,24 +60,27 @@ Secondary school 51, Vladivostok, 1995 -- 2005.
 %----------------------------------------------------------------------------------------
 
 \begin{rSection}{Experience}
-
-\begin{rCompany}{Rhonda Software Ltd.}{October 2012 -- Present}{Embedded Software Engineer}{Vladivostok, RUS}
-\item CSR plc. contractor. Work on the COACH\texttrademark \ \textit{imaging} SoC platform.
+\begin{rCompany}{\href{http://www.rhondasoftware.com}{Rhonda Software}}{October 2012 -- present}{Embedded Software Engineer}{Vladivostok, RUS}
+\item Camera SDK development team member for \href{http://www.ambarella.com}{Ambarella Inc.} \textit{imaging} SoC.
+\item Transport Module (TM) implementation for test framework development team in order to test SDK in automated mode. Full development cycle: design plan presentation (Mind Maps), architecture design (UML), coding (C, C++, STL), build system implementation (CMake, Python, BAT, Bash), unit test infrastructure bring-up (CppUTest) and documentation support (Doxygen). The module is provided as cross-platform and multi-protocol core library with C-style API and asynchronous data transceiver functionality for RPC. TM transparently covers UART, USB and TCP/IP underlying protocols. The module is able to be launched on Windows, Linux and embedded HW-platform the SDK is tested on. Compilers covering: Visual Studio, GCC and IAR.
+\item Data-link layer protocol prototyping for various physical transports: UART, I2C, SPI, etc. One solution -- several transports covering. The protocol is included as part of TM and is used for customer devices communication as is.
+\item Firmware burning tool support and features implementation: Qt application. Build environment is packed to \href{www.docker.com}{docker} container.
+\item Review of the circuits design for customer's projects.
+\item Various \textit{peripheral}-specific hardware activities. \newline
+\item \href{http://www.csr.com}{CSR plc.} contractor. Work on the COACH \textit{imaging} SoC platform.
 \item Distributed supporting of the embedded software for ODM/OEM customers: main brand-manufacturers of imaging devices (digital still cameras, mobile driver recorders, action cameras, etc).
-\item Support offices are located in a number of countries: China, Israel, Japan, Russia, South Korea, US.
-\item Solving of time-critical project issues under a customer's pressure. Resolved a number of various \textquotedblleft MP block\textquotedblright software and hardware problems. Improved processing performance of UI images for customer's projects.
-\item Supported \textit{peripheral} domain. CMOS/CCD image sensors: drivers bug-fixing and implementation of new capabilities, support for smear-correction driver team. NV-memory storages: file system bug-fixing, NAND drivers timing-optimizations. Display cluster: issues related to video output (LCD, HDMI). Volatile-memory storages: DRAM performance measurement and timing-optimizations. On-chip peripheral: support for usual BSP device driver set (GPIO, ADC, PWM, RTC, SPI, I2C, UART, USB, function-specific HW units and more). PC-side applied software: bug-fixing and new features implementation for firmware burning tool (windows forms). Various peripheral-specific algorithms: e.g. Dynamic Voltage Management based on PID-controller.
-\item Business trip to CSR Israel (formerly Zoran Corp.): MATAM, Advanced Technology Center, Haifa.
+\item Support sites are located in a number of countries: China, Israel, Japan, Russia, South Korea, US.
+\item Solving of time critical project issues under a customer's pressure. Resolved a number of various \textquotedblleft MP block\textquotedblright software and hardware problems. Improved processing performance of UI images for customer's projects.
+\item \textit{Peripheral} domain support. CMOS/CCD image sensors: drivers bug fixing and implementation of new capabilities, support for smear correction driver team. NV-memory storages: file system bug-fixing, NAND drivers timing optimizations. Display cluster: issues related to video output (LCD, HDMI). Volatile-memory storages: DRAM performance measurement and timing optimizations. On-chip peripheral: support for usual BSP device driver set (GPIO, ADC, PWM, RTC, SPI, I2C, UART, USB, function-specific HW units and more). PC-side applied software: bug fixing and new features implementation for firmware burning tool (windows forms). Various peripheral-specific algorithms: e.g. dynamic voltage management based on PID-controller.
+\item Business trip to CSR Israel (formerly Zoran Corp.): MATAM, Advanced Technology Center, Haifa. \newline
 \end{rCompany}
-
 \begin{rCompany}{Spider Pacific Ltd.}{October 2010 -- October 2012}{Embedded Systems Engineer}{Vladivostok, RUS}
-\item Start-up for a development of an applied hardware.
-\item Designed model of the mechanical-less manipulator as part of the project management software system.
-\item Designed prototype of the valve-tube amplifier for PC sound cards.
-\item Designed and manufactured prototype of \textquotedblleft Power over Ethernet\textquotedblright injector. Implemented physical layer of the IEEE 802.3af specification. The product was used in a number of computer network projects.
-\item Later, in November-2013, implemented IEEE 802.3af full-compatible prototype for this company based on the LTC4263 IC by Linear Technology Corp.
+\item Applied hardware development start-up.
+\item Mechanicalless manipulator prototyping as part of the project management software system. \newline Accelerometer- and gyroscope-based console.
+\item Transformerless vacuum tube stereo amplifier prototying for headphones. \newline Simple SRPP cascade and preamplifier per channel.
+\item Prototype of the \textquotedblleft Power over Ethernet\textquotedblright \ injector design and manufacturing. Physical layer of the IEEE 802.3af specification was implemented. The product was used in a number of computer network projects.
+\item Later, in November-2013, implemented IEEE 802.3af full-compatible prototype for this company based on the LTC4263 IC by \href{http://www.linear.com}{Linear Technology Corp}.
 \end{rCompany}
-
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
@@ -101,37 +88,24 @@ Secondary school 51, Vladivostok, 1995 -- 2005.
 %----------------------------------------------------------------------------------------
 
 \begin{rSection}{Skills}
+\begin{rItemize}
+\item \textbf{\textit{SW development}} \newline Embedded C and C++: source code mixing, STL, Boost. Interrupt- and event-driven design. Ability to read and write code areas on assembler. Development process automation and provisioning: Python, Bash, Docker (docker-py), Vagrant. Build systems: Make, CMake, NMake, Jom. Multi-threading: Atomthreads, ThreadX, Win32, POSIX. Device drivers. Network I/O: Berkeley sockets, Winsock. User-space USB development: libusb. Unit test frameworks: CppUTest. Static code analyzers: Cppcheck, ReSharper C++. Version control: Perforce, SVN, Git. Code review: Code Collaborator, Review Board (rbt tools). Issue trackers: JIRA, Redmine, YouTrack. CI: QuickBuild. Documentation: Doxygen, \TeX, MkDocs. GUI frameworks: Qt. Progressive system languages: Rust.
+\item \textbf{\textit{HW development}} \newline Digital/analog/tube circuits design and analysis: electrical and thermal calculations, circuits emulation. Selection of electronic components: excellent guided both in through-hole and surface-mount packages. Routing and assembling of prototype PCBs: Eagle CAD, Sprint Layout, KiCAD, Altium Designer. Excellent soldering skills. Strong knowledge of Atmel AVR 8-bit microcontrollers. Power electronics understanding: linear and impulse circuits.
+\item \textbf{\textit{Debugging}} \newline Crash logs analyzing. Remote debugging: customer support via e-mail threads and Skype in case of non-reproducible locally problems. In-circuit emulation: JTAG. Lab-equipment usage: digital power supply, multimeter, logic/spectrum analyzer, analog/digital oscilloscope, function generator, autotransformer and more.
+\item \textbf{\textit{Languages}} \newline Russian -- native \newline English -- professional working proficiency \newline \begin{CJK}{UTF8}{min}日本語\end{CJK} -- elementary proficiency
+\item \textbf{\textit{Miscellaneous}} \newline Foundations of project management: Spider Project. Lathe and milling works: Proxxon equipment. Bring up of computer networks. Experience in transferring of knowledges to students: electronics and programming foundations.
+\end{rItemize}
+\end{rSection}
 
-\begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-SW-Development & Embedded C and C++: source code mixing, a bit of STL. Interrupt- and \\
-               & event-driven design. Ability to read and write code area on assembler. \\
-               & Development process automation: Python and Perl. Build system: Make \\
-               & and WAF. Multi-threading: Atomthreads, ThreadX. Device drivers. \\
-               & Version control: Perforce, SVN, Git. Code review: Code Collaborator, \\
-               & Review Board. Issue tracking: JIRA, Redmine, eTraxis. Continuous \\
-               & integration: QuickBuild. Code documentation: Doxygen. \\ \\
+%----------------------------------------------------------------------------------------
+%   PUBLICATIONS
+%----------------------------------------------------------------------------------------
 
-HW-Development & Digital/analog/tube circuits design and analysis: electrical and thermal \\
-               & calculations, circuits emulation. Selection of electronic components: \\
-               & excellent guided both in through-hole and surface-mount packages. \\
-               & Routing and assembling of prototype PCBs: Eagle CAD, Sprint Layout, \\
-               & KiCAD, a bit of Altium Designer. Excellent manual soldering skills. \\ \\
-
-Debugging      & Crash-logs analyzing. Remote debugging: customer support via e-mail \\
-               & threads and Skype in case of non-reproducible locally problems. In-circuit \\
-               & emulation: JTAG. Lab-equipment usage: digital power supply, multimeter, \\
-               & analog/digital oscilloscope, signals generator, autotransformer and more. \\ \\
-
-Languages      & English -- professional working proficiency \\
-               & \begin{CJK}{UTF8}{min}日本語\end{CJK} -- elementary proficiency \\
-               & Russian -- native \\ \\
-
-Misc           & Foundations of project management: Spider Project. Lathe and milling \\
-               & works: Proxxon equipment. Bring up of computer networks: OSI. A bit \\
-               & experience in transferring of knowledges to students: electronics and \\
-               & programming foundations. Computer typography: \TeX. \\ \\ \\
-\end{tabular}
-
+\begin{rSection}{Publications}
+\begin{rItemize}
+\item Ivanov V. \textquotedblleft Diagnostic system of the motor drive module for the underwater robot\textquotedblright. Master thesis. Institute of Marine Technology Problems FEB RAS, Vladivostok, June 2010.
+\item Ivanov V. \textquotedblleft Automated speed control of the motor shaft\textquotedblright. Bachelor thesis. \newline Institute of Physics and Information Technologies FEFU. Vladivostok, June 2009.
+\end{rItemize}
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
@@ -139,9 +113,7 @@ Misc           & Foundations of project management: Spider Project. Lathe and mi
 %----------------------------------------------------------------------------------------
 
 \begin{rSection}{Keywords}
-
-1-Wire, ADC, Altium Designer, Atomthreads, AVR, avr-gcc, Bash, BSP, C, C++, CAN, Code Collaborator, cross-compiler, Cygwin, DAC, device driver, Doxygen, Eagle CAD, Eclipse, eTraxis, FAT, FileX, Gerber, Git, GNU toolchain, G-Sensor, gyro sensor, HW/SW co-design, IEEE 802.3af, I2C, JIRA, JTAG, KiCAD, libpng, Linux, Make, Maxima, MCS-51, MIPS, OOP, image sensor, OSI, Perforce, Perl, PHP, PIC, Proxxon, Python, QuickBuild, R\&D, Redmine, RS-232, RTOS, SPI, SPICE, Spider Project, RAW Bayer, Review Board, sde, Source Insight, Sprint Layout, SQL, STL, SVN, \TeX, ThreadX, UART, UML, USB, V8, Visual Studio, WAF, Windows, zlib
-
+1-Wire, ADC, Altium Designer, Atomthreads, AVR, avr-gcc, Bash, BSP, C, C++, CAN, CMake, Code Collaborator, cross-compiler, Cygwin, DAC, device driver, Doxygen, Eagle CAD, Eclipse, eTraxis, FAT, FileX, Gerber, Git, GNU toolchain, G-Sensor, gyro sensor, HW/SW co-design, IEEE 802.3af, I2C, JIRA, JTAG, KiCAD, libpng, Linux, Make, Maxima, MCS-51, MIPS, OOP, image sensor, OSI, Perforce, Perl, PHP, PIC, Proxxon, Python, QuickBuild, R\&D, Redmine, RS-232, RTOS, SPI, SPICE, Spider Project, RAW Bayer, Review Board, sde, Source Insight, Sprint Layout, SQL, STL, SVN, \TeX, ThreadX, UART, UML, USB, V8, Visual Studio, WAF, Windows, zlib
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
@@ -149,7 +121,6 @@ Misc           & Foundations of project management: Spider Project. Lathe and mi
 %----------------------------------------------------------------------------------------
 
 \begin{rSection}{Hobby and Interests}
-
 \begin{rHobby}
 \item Hi-Tech and impacting one on a human being, designing hardware and software
 \item Physics (two completed university years), applied math, world economic
@@ -157,7 +128,6 @@ Misc           & Foundations of project management: Spider Project. Lathe and mi
 \item Swimming (sports category), marine multi-athlon (sports category)
 \item Cooking, electronic music
 \end{rHobby}
-
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
