--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -1,29 +1,20 @@
-%----------------------------------------------------------------------------------------
-%   PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
-%----------------------------------------------------------------------------------------
+%%%%  HEADER  %%%%
 
 \documentclass{template}
 
-% \setcounter{page}{1}
-% \pagenumbering{arabic}
-
 \name{Vladimir Ivanov}
-\address{\em \href{}Vladivostok, Maritime Province, Russia}
 \address{\Mobilefone \ +7$\cdot$924$\cdot$320$\cdot$09$\cdot$34 \ \textbar \ \ \Letter \ \href{mailto:job@vova-ivanov.info}{job@vova-ivanov.info} \ \textbar \ \ \includegraphics[scale=0.3]{skype-logo} \href{skype:v.u.ivanov?add}{v.u.ivanov}}
+\address{\em Vladivostok, Maritime Province, Russia}
 
 \begin{document}
 
-%----------------------------------------------------------------------------------------
-%   SUMMARY
-%----------------------------------------------------------------------------------------
+%%%%  SUMMARY  %%%%
 
 \begin{rSection}{Summary}
 Proficient wide-skilled engineer with a focus on the EECS: 5+ years in designing of embedded systems. I have built own experience through hardware and software codesign. Strong skills in electrical engineering, computer science and research area. Ability to produce stable results under high pressure conditions. Powerful human qualities. I aim to work on a innovative company in a team of professionals. Main areas of interest: consumer electronics, robotics, automotive and game industry, medical equipment, telecommunication and networks, your suggestion?
 \end{rSection}
 
-%----------------------------------------------------------------------------------------
-%   EDUCATION
-%----------------------------------------------------------------------------------------
+%%%%  EDUCATION  %%%%
 
 \begin{rSection}{Education}
 {\bf \href{http://wwwold.dvfu.ru/en/web/fefu/}{Far Eastern Federal University}, Vladivostok} \hfill {August 2005 -- June 2010} \newline
@@ -40,9 +31,7 @@ General education. \newline
 Indepth study of Japanese Language.
 \end{rSection}
 
-%----------------------------------------------------------------------------------------
-%   SERTIFICATES
-%----------------------------------------------------------------------------------------
+%%%%  CERTIFICATES  %%%%
 
 \begin{rSection}{Certificates}
 \begin{rItemize}
@@ -55,9 +44,7 @@ Secondary school 51, Vladivostok, 1995 -- 2005.
 \end{rItemize}
 \end{rSection}
 
-%----------------------------------------------------------------------------------------
-%   EXPERIENCE
-%----------------------------------------------------------------------------------------
+%%%%  EXPERIENCE  %%%%
 
 \begin{rSection}{Experience}
 \begin{rCompany}{\href{http://www.rhondasoftware.com}{Rhonda Software}}{October 2012 -- present}{Embedded Software Engineer}{Vladivostok, RUS}
@@ -83,9 +70,7 @@ Secondary school 51, Vladivostok, 1995 -- 2005.
 \end{rCompany}
 \end{rSection}
 
-%----------------------------------------------------------------------------------------
-%   SKILLS
-%----------------------------------------------------------------------------------------
+%%%%  SKILLS  %%%%
 
 \begin{rSection}{Skills}
 \begin{rItemize}
@@ -97,9 +82,7 @@ Secondary school 51, Vladivostok, 1995 -- 2005.
 \end{rItemize}
 \end{rSection}
 
-%----------------------------------------------------------------------------------------
-%   PUBLICATIONS
-%----------------------------------------------------------------------------------------
+%%%%  PUBLICATIONS  %%%%
 
 \begin{rSection}{Publications}
 \begin{rItemize}
@@ -108,28 +91,23 @@ Secondary school 51, Vladivostok, 1995 -- 2005.
 \end{rItemize}
 \end{rSection}
 
-%----------------------------------------------------------------------------------------
-%   KEYWORDS
-%----------------------------------------------------------------------------------------
+%%%%  KEYWORDS  %%%%
 
 \begin{rSection}{Keywords}
-1-Wire, ADC, Altium Designer, Atomthreads, AVR, avr-gcc, Bash, BSP, C, C++, CAN, CMake, Code Collaborator, cross-compiler, Cygwin, DAC, device driver, Doxygen, Eagle CAD, Eclipse, eTraxis, FAT, FileX, Gerber, Git, GNU toolchain, G-Sensor, gyro sensor, HW/SW co-design, IEEE 802.3af, I2C, JIRA, JTAG, KiCAD, libpng, Linux, Make, Maxima, MCS-51, MIPS, OOP, image sensor, OSI, Perforce, Perl, PHP, PIC, Proxxon, Python, QuickBuild, R\&D, Redmine, RS-232, RTOS, SPI, SPICE, Spider Project, RAW Bayer, Review Board, sde, Source Insight, Sprint Layout, SQL, STL, SVN, \TeX, ThreadX, UART, UML, USB, V8, Visual Studio, WAF, Windows, zlib
+1-Wire, ADC, Altium Designer, Atomthreads, AVR, avr-gcc, BAT, Bash, Berkeley sockets, Boost, BSP, C, C++, CAN, CMake, Code Collaborator, Cppcheck, CppUTest, cross-compiler, Cygwin, DAC, device driver, Docker, Doxygen, Eagle CAD, Eclipse, eTraxis, FAT, FileX, GCC, Gerber, Git, GNU toolchain, Go, G-Sensor, gyro sensor, HW/SW co-design, IEEE 802.3af, I2C, IAR, image sensor, JIRA, Jom, JTAG, KiCAD, libpng, libusb, Linux, Make, Maxima, MCS-51, microcontroller, MIPS, Mind Maps, MinGW, MkDocs, NMake, OOP, OSI, Perforce, Perl, PHP, PIC, POSIX, Proxxon, Python, Qt, QuickBuild, RAW Bayer, R\&D, Redmine, ReSharper C++, Review Board, RS-232, RTOS, Rust, SPI, SPICE, Spider Project, sde, SoC, Source Insight, Sprint Layout, SQL, STL, SVN, TCP/IP, \TeX, ThreadX, UART, UML, USB, V8, Vagrant, Visual Studio, Win32, Windows, Winsock, YouTrack, zlib
 \end{rSection}
 
-%----------------------------------------------------------------------------------------
-%   HOBBY AND INTERESTS
-%----------------------------------------------------------------------------------------
+%%%%  HOBBY AND INTERESTS  %%%%
 
 \begin{rSection}{Hobby and Interests}
 \begin{rHobby}
 \item Hi-Tech and impacting one on a human being, designing hardware and software
-\item Physics (two completed university years), applied math, world economic
+\item Physics, applied math, world economic
 \item Professional sports leagues: NHL, NFL, MLB
 \item Swimming (sports category), marine multi-athlon (sports category)
 \item Cooking, electronic music
 \end{rHobby}
 \end{rSection}
 
-%----------------------------------------------------------------------------------------
-
 \end{document}
+
