--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -11,7 +11,7 @@
 %%%%  SUMMARY  %%%%
 
 \begin{rSection}{Summary}
-Proficient wide-skilled engineer with a focus on the EECS: 5+ years in designing of embedded systems. I have built own experience through hardware and software codesign. Strong skills in electrical engineering, computer science and research area. Ability to produce stable results under high pressure conditions. Powerful human qualities. I aim to work on a innovative company in a team of professionals. Main areas of interest: consumer electronics, robotics, automotive and game industry, medical equipment, telecommunication and networks, your suggestion?
+Proficient wide-skilled engineer with a focus on the EECS: 5+ years in designing of embedded systems. I have built own experience through hardware and software codesign. Strong skills in electrical engineering, computer science and research area. Ability to produce stable results under high pressure conditions. Powerful human qualities. I aim to work in an innovative company in a team of professionals. Main areas of interest: consumer electronics, robotics, automotive and game industry, medical equipment, telecommunication, computer networks and more.
 \end{rSection}
 
 %%%%  EDUCATION  %%%%
@@ -48,13 +48,13 @@ Secondary school 51, Vladivostok, 1995 -- 2005.
 
 \begin{rSection}{Experience}
 \begin{rCompany}{\href{http://www.rhondasoftware.com}{Rhonda Software}}{October 2012 -- present}{Embedded Software Engineer}{Vladivostok, RUS}
-\item Camera SDK development team member for \href{http://www.ambarella.com}{Ambarella Inc.} \textit{imaging} SoC.
-\item Transport Module (TM) implementation for test framework development team in order to test SDK in automated mode. Full development cycle: design plan presentation (Mind Maps), architecture design (UML), coding (C, C++, STL), build system implementation (CMake, Python, BAT, Bash), unit test infrastructure bring-up (CppUTest) and documentation support (Doxygen). The module is provided as cross-platform and multi-protocol core library with C-style API and asynchronous data transceiver functionality for RPC. TM transparently covers UART, USB and TCP/IP underlying protocols. The module is able to be launched on Windows, Linux and embedded HW-platform the SDK is tested on. Compilers covering: Visual Studio, GCC and IAR.
+\item Camera SDK development team member for \href{http://www.ambarella.com}{Ambarella Inc.} \textit{imaging} SoC with \textit{ARM Cortex-A} core.
+\item Transport Module (TM) implementation for test framework development team in order to test SDK in automated mode. Full independent development cycle: design plan presentation (Mind Maps), architecture design (UML), coding (C, embedded C++), build system implementation (CMake, Python, BAT, Bash), unit test infrastructure bring-up (CppUTest), documentation support (Doxygen). The module is provided as cross-platform and multi-protocol core library with C-style API and asynchronous data transceiver functionality for RPC. TM transparently covers UART, USB and TCP/IP underlying protocols. The module is able to be launched on Windows, Linux and embedded HW-platform the SDK is tested on. Compilers covering: Visual Studio, GCC, MinGW and IAR.
 \item Data-link layer protocol prototyping for various physical transports: UART, I2C, SPI, etc. One solution -- several transports covering. The protocol is included as part of TM and is used for customer devices communication as is.
 \item Firmware burning tool support and features implementation: Qt application. Build environment is packed to \href{www.docker.com}{docker} container.
 \item Review of the circuits design for customer's projects.
 \item Various \textit{peripheral}-specific hardware activities. \newline
-\item \href{http://www.csr.com}{CSR plc.} contractor. Work on the COACH \textit{imaging} SoC platform.
+\item \href{http://www.csr.com}{CSR plc.} contractor. Work on the COACH \textit{imaging} SoC platform with \textit{MIPS} core.
 \item Distributed supporting of the embedded software for ODM/OEM customers: main brand-manufacturers of imaging devices (digital still cameras, mobile driver recorders, action cameras, etc).
 \item Support sites are located in a number of countries: China, Israel, Japan, Russia, South Korea, US.
 \item Solving of time critical project issues under a customer's pressure. Resolved a number of various \textquotedblleft MP block\textquotedblright software and hardware problems. Improved processing performance of UI images for customer's projects.
@@ -74,7 +74,7 @@ Secondary school 51, Vladivostok, 1995 -- 2005.
 
 \begin{rSection}{Skills}
 \begin{rItemize}
-\item \textbf{\textit{SW development}} \newline Embedded C and C++: source code mixing, STL, Boost. Interrupt- and event-driven design. Ability to read and write code areas on assembler. Development process automation and provisioning: Python, Bash, Docker (docker-py), Vagrant. Build systems: Make, CMake, NMake, Jom. Multi-threading: Atomthreads, ThreadX, Win32, POSIX. Device drivers. Network I/O: Berkeley sockets, Winsock. User-space USB development: libusb. Unit test frameworks: CppUTest. Static code analyzers: Cppcheck, ReSharper C++. Version control: Perforce, SVN, Git. Code review: Code Collaborator, Review Board (rbt tools). Issue trackers: JIRA, Redmine, YouTrack. CI: QuickBuild. Documentation: Doxygen, \TeX, MkDocs. GUI frameworks: Qt. Progressive system languages: Rust.
+\item \textbf{\textit{SW development}} \newline Embedded C and C++: source code mixing. C++11. STL. Boost. Interrupt- and event-driven design. Ability to read and write code areas on assembler. Development process automation: Python, Bash. DevOps: Docker (docker-py), Vagrant. Build systems: Make, CMake, NMake, Jom. Multi-threading: Atomthreads, ThreadX, Win32, POSIX. Device drivers. Network I/O: Berkeley sockets, Winsock. User-space USB development: libusb. Unit test frameworks: CppUTest. Static code analyzers: Cppcheck, ReSharper C++. Version control: Perforce, SVN, Git. Code review: Code Collaborator, Review Board (rbt tools). Issue trackers: JIRA, Redmine, YouTrack. CI: QuickBuild. Documentation: Doxygen, \TeX, MkDocs. GUI frameworks: Qt. Progressive system languages: Rust, Go.
 \item \textbf{\textit{HW development}} \newline Digital/analog/tube circuits design and analysis: electrical and thermal calculations, circuits emulation. Selection of electronic components: excellent guided both in through-hole and surface-mount packages. Routing and assembling of prototype PCBs: Eagle CAD, Sprint Layout, KiCAD, Altium Designer. Excellent soldering skills. Strong knowledge of Atmel AVR 8-bit microcontrollers. Power electronics understanding: linear and impulse circuits.
 \item \textbf{\textit{Debugging}} \newline Crash logs analyzing. Remote debugging: customer support via e-mail threads and Skype in case of non-reproducible locally problems. In-circuit emulation: JTAG. Lab-equipment usage: digital power supply, multimeter, logic/spectrum analyzer, analog/digital oscilloscope, function generator, autotransformer and more.
 \item \textbf{\textit{Languages}} \newline Russian -- native \newline English -- professional working proficiency \newline \begin{CJK}{UTF8}{min}日本語\end{CJK} -- elementary proficiency
@@ -87,14 +87,14 @@ Secondary school 51, Vladivostok, 1995 -- 2005.
 \begin{rSection}{Publications}
 \begin{rItemize}
 \item Ivanov V. \textquotedblleft Diagnostic system of the motor drive module for the underwater robot\textquotedblright. Master thesis. Institute of Marine Technology Problems FEB RAS, Vladivostok, June 2010.
-\item Ivanov V. \textquotedblleft Automated speed control of the motor shaft\textquotedblright. Bachelor thesis. \newline Institute of Physics and Information Technologies FEFU. Vladivostok, June 2009.
+\item Ivanov V. \textquotedblleft Automated speed control of the motor shaft\textquotedblright. Bachelor thesis. \newline Institute of Physics and Information Technologies FEFU. Vladivostok, May 2009.
 \end{rItemize}
 \end{rSection}
 
 %%%%  KEYWORDS  %%%%
 
 \begin{rSection}{Keywords}
-1-Wire, ADC, Altium Designer, Atomthreads, AVR, avr-gcc, BAT, Bash, Berkeley sockets, Boost, BSP, C, C++, CAN, CMake, Code Collaborator, Cppcheck, CppUTest, cross-compiler, Cygwin, DAC, device driver, Docker, Doxygen, Eagle CAD, Eclipse, eTraxis, FAT, FileX, GCC, Gerber, Git, GNU toolchain, Go, G-Sensor, gyro sensor, HW/SW co-design, IEEE 802.3af, I2C, IAR, image sensor, JIRA, Jom, JTAG, KiCAD, libpng, libusb, Linux, Make, Maxima, MCS-51, microcontroller, MIPS, Mind Maps, MinGW, MkDocs, NMake, OOP, OSI, Perforce, Perl, PHP, PIC, POSIX, Proxxon, Python, Qt, QuickBuild, RAW Bayer, R\&D, Redmine, ReSharper C++, Review Board, RS-232, RTOS, Rust, SPI, SPICE, Spider Project, sde, SoC, Source Insight, Sprint Layout, SQL, STL, SVN, TCP/IP, \TeX, ThreadX, UART, UML, USB, V8, Vagrant, Visual Studio, Win32, Windows, Winsock, YouTrack, zlib
+1-Wire, ADC, Altium Designer, Atomthreads, AVR, avr-gcc, BAT, Bash, Berkeley sockets, Boost, BSP, C, C++11, CAN, CMake, Code Collaborator, Cppcheck, CppUTest, cross-compiler, Cygwin, DAC, device driver, DevOps, Docker, Doxygen, Eagle CAD, Eclipse, eTraxis, FAT, FileX, GCC, Gerber, Git, GNU toolchain, Go, G-Sensor, gyro sensor, HW/SW co-design, IEEE 802.3af, I2C, IAR, image sensor, JIRA, Jom, JTAG, KiCAD, libpng, libusb, Linux, Make, Maxima, MCS-51, microcontroller, MIPS, Mind Maps, MinGW, MkDocs, NMake, OOP, OSI, Perforce, Perl, PHP, PIC, POSIX, Proxxon, Python, Qt, QuickBuild, RAW Bayer, R\&D, Redmine, ReSharper C++, Review Board, RS-232, RTOS, Rust, SPI, SPICE, Spider Project, sde, SoC, Source Insight, Sprint Layout, SQL, STL, SVN, TCP/IP, \TeX, ThreadX, UART, UML, USB, V8, Vagrant, Visual Studio, Win32, Windows, Winsock, YouTrack, zlib
 \end{rSection}
 
 %%%%  HOBBY AND INTERESTS  %%%%
