--- a/template.cls
+++ b/template.cls
@@ -72,6 +72,7 @@
     \MakeUppercase{\bf #1}                          %% Section title
     \sectionlineskip
     \hrule                                          %% Horizontal line
+    \medskip
     \begin{list}{} {                                %% List for each individual item in the section
         \setlength{\leftmargin}{1.5em}              %% Margin within the section
     }
