Added GPA for school

--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -24,11 +24,13 @@ GPA: 3.63/4.
 
 {\bf \href{http://www.school51.pupils.ru}{Secondary school 51}, Vladivostok} \hfill {September 2003 -- June 2005} \newline
 Secondary education. \newline
-Indepth study of Japanese Language.
+Indepth study of Japanese Language. \newline
+GPA: 3.80/4
 
 {\bf \href{http://www.school51.pupils.ru}{Secondary school 51}, Vladivostok} \hfill {September 1995 -- June 2003} \newline
 General education. \newline
-Indepth study of Japanese Language.
+Indepth study of Japanese Language. \newline
+GPA: 3.86/4
 \end{rSection}
 
 %%%%  CERTIFICATES  %%%%
