--- a/Vladimir.Ivanov.CV.tex
+++ b/Vladimir.Ivanov.CV.tex
@@ -76,7 +76,7 @@ Secondary school 51, Vladivostok, 1995 -- 2005.
 
 \begin{rSection}{Skills}
 \begin{rItemize}
-\item \textbf{\textit{SW development}} \newline Embedded C and C++: source code mixing. C++11. STL. Boost. Interrupt- and event-driven design. Ability to read and write code areas on assembler. Development process automation: Python, Bash. DevOps: Docker (docker-py), Vagrant. Build systems: Make, CMake, NMake, Jom. Multi-threading: Atomthreads, ThreadX, Win32, POSIX. Device drivers. Network I/O: Berkeley sockets, Winsock. User-space USB development: libusb. Unit test frameworks: CppUTest. Static code analyzers: Cppcheck, ReSharper C++. Version control: Perforce, SVN, Git. Code review: Code Collaborator, Review Board (rbt tools). Issue trackers: JIRA, Redmine, YouTrack. CI: QuickBuild. Documentation: Doxygen, \TeX, MkDocs. GUI frameworks: Qt. Progressive system languages: Rust, Go.
+\item \textbf{\textit{SW development}} \newline Embedded C and C++: source code mixing. C++11. STL. Boost. Interrupt- and event-driven design. Ability to read and write code areas on assembler. Development process automation: Python, Bash. DevOps: Docker (docker-py), Vagrant. Build systems: Make, CMake, NMake, Jom. Multi-threading: Atomthreads, ThreadX, Win32, POSIX. Device drivers. Network I/O: Berkeley sockets, Winsock. USB frameworks: libusb. Unit test frameworks: CppUTest. Static code analyzers: Cppcheck, ReSharper C++. Version control: Perforce, SVN, Git. Code review: Code Collaborator, Review Board (rbt tools). Issue trackers: JIRA, Redmine, YouTrack. CI: QuickBuild. Documentation: Doxygen, \TeX, MkDocs. GUI frameworks: Qt. Progressive system languages: Rust, Go.
 \item \textbf{\textit{HW development}} \newline Digital/analog/tube circuits design and analysis: electrical and thermal calculations, circuits emulation. Selection of electronic components: excellent guided both in through-hole and surface-mount packages. Routing and assembling of prototype PCBs: Eagle CAD, Sprint Layout, KiCAD, Altium Designer. Excellent soldering skills. Strong knowledge of Atmel AVR 8-bit microcontrollers. Power electronics understanding: linear and impulse circuits.
 \item \textbf{\textit{Debugging}} \newline Crash logs analyzing. Remote debugging: customer support via e-mail threads and Skype in case of non-reproducible locally problems. In-circuit emulation: JTAG. Lab-equipment usage: digital power supply, multimeter, logic/spectrum analyzer, analog/digital oscilloscope, function generator, autotransformer and more.
 \item \textbf{\textit{Languages}} \newline Russian -- native \newline English -- professional working proficiency \newline \begin{CJK}{UTF8}{min}日本語\end{CJK} -- elementary proficiency
@@ -96,7 +96,7 @@ Secondary school 51, Vladivostok, 1995 -- 2005.
 %%%%  KEYWORDS  %%%%
 
 \begin{rSection}{Keywords}
-1-Wire, ADC, Altium Designer, Atomthreads, AVR, avr-gcc, BAT, Bash, Berkeley sockets, Boost, BSP, C, C++11, CAN, CMake, Code Collaborator, Cppcheck, CppUTest, cross-compiler, Cygwin, DAC, device driver, DevOps, Docker, Doxygen, Eagle CAD, Eclipse, eTraxis, FAT, FileX, GCC, Gerber, Git, GNU toolchain, Go, G-Sensor, gyro sensor, HW/SW co-design, IEEE 802.3af, I2C, IAR, image sensor, JIRA, Jom, JTAG, KiCAD, libpng, libusb, Linux, Make, Maxima, MCS-51, microcontroller, MIPS, Mind Maps, MinGW, MkDocs, NMake, OOP, OSI, Perforce, Perl, PHP, PIC, POSIX, Proxxon, Python, Qt, QuickBuild, RAW Bayer, R\&D, Redmine, ReSharper C++, Review Board, RS-232, RTOS, Rust, SPI, SPICE, Spider Project, sde, SoC, Source Insight, Sprint Layout, SQL, STL, SVN, TCP/IP, \TeX, ThreadX, UART, UML, USB, V8, Vagrant, Visual Studio, Win32, Windows, Winsock, YouTrack, zlib
+1-Wire, ADC, Altium Designer, Atomthreads, AVR, avr-gcc, BAT, Bash, Berkeley sockets, Boost, BSP, C, C++11, CAN, CMake, Code Collaborator, Cppcheck, CppUTest, cross-compiler, Cygwin, DAC, device driver, DevOps, Docker, Doxygen, Eagle CAD, Eclipse, eTraxis, FAT, FileX, GCC, Gerber, Git, GNU toolchain, Go, G-Sensor, gyro sensor, HW/SW co-design, IEEE 802.3af, I2C, IAR, image sensor, JIRA, Jom, JTAG, KiCAD, libpng, libusb, Linux, Make, Maxima, MCS-51, microcontroller, MIPS, Mind Maps, MinGW, MkDocs, NMake, OOP, OSI, Perforce, Perl, PHP, PIC, POSIX, Proxxon, PyCharm, Python, Qt, QuickBuild, RAW Bayer, R\&D, Redmine, ReSharper C++, Review Board, RS-232, RTOS, Rust, SPI, SPICE, Spider Project, sde, SoC, Source Insight, Sprint Layout, SQL, STL, SVN, TCP/IP, \TeX, ThreadX, UART, UML, USB, V8, Vagrant, Visual Studio, Win32, Windows, Winsock, YouTrack, zlib
 \end{rSection}
 
 %%%%  HOBBY AND INTERESTS  %%%%
